--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,4 +73,55 @@
             android:background="@color/color_text_hint"
             android:layout_weight="1"/>
     </LinearLayout>
+
+    <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomButton
+        android:id="@+id/register"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginHorizontal="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_30"
+        android:background="@drawable/backgound_register_facebook"
+        android:text="@string/register_facebook"
+        android:textAllCaps="false"
+        android:drawableLeft="@drawable/icon_facebook"
+        android:paddingLeft="@dimen/dp_20"
+        android:textAlignment="textStart"
+        android:drawablePadding="@dimen/dp_20"
+        android:textColor="@color/color_white"
+        android:textSize="@dimen/text_size_16sp"
+        android:gravity="center|start" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="2">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:layout_weight="1">
+            <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
+                android:id="@+id/text_sign_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/register_account"
+                android:textStyle="bold"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/text_size_16sp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:layout_weight="1">
+            <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
+                android:id="@+id/forr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/foreget_password"
+                android:textStyle="bold"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/text_size_16sp"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
