--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -20,16 +20,28 @@
                 android:background="@color/color_white"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_200">
-                <fragment
-                    android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
-                    android:id="@+id/youtube_player"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent">
+                    <WebView
+                        android:id="@+id/web_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    </WebView>
+                    <RelativeLayout
+                        android:id="@+id/layout_youtube"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/color_transparent">
+                    </RelativeLayout>
+                </FrameLayout>
+
             </LinearLayout>
             <LinearLayout
                 android:background="@color/color_white"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:paddingTop="@dimen/dp_5"
                 android:layout_height="wrap_content">
                 <RelativeLayout
                     android:layout_width="match_parent"
