C:/Program Files/Git/

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:background="@color/color_white"
-            android:hint="Email đăng nhâjp"
+            android:hint="@string/email_hint"
             android:paddingVertical="@dimen/dp_10"
             android:paddingStart="@dimen/dp_10"
             android:maxLines="1"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/color_white"
-            android:hint="Mật khẩu"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingVertical="@dimen/dp_10"
             android:paddingStart="@dimen/dp_10"
