--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,7 +51,7 @@
                     </LinearLayout>
                 </RelativeLayout>
                 <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
-                    android:id="@+id/text_displayname"
+                    android:id="@+id/text_display_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Ánh Nguyễn"
@@ -138,8 +138,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <RelativeLayout
-                        android:id="@+id/layout_infomation"
+                        android:id="@+id/layout_information"
                         android:padding="5dp"
+                        android:background="@drawable/drawable_button_white_click"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <ImageView
@@ -168,6 +169,7 @@
                     <RelativeLayout
                         android:id="@+id/layout_password"
                         android:padding="5dp"
+                        android:background="@drawable/drawable_button_white_click"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <ImageView
@@ -193,20 +195,21 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/icon_arrow_left"/>
                     </RelativeLayout>
-
-
                 </LinearLayout>
 
             </LinearLayout>
             <LinearLayout
                 android:background="@color/color_white"
                 android:orientation="vertical"
+                android:paddingVertical="@dimen/dp_5"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <RelativeLayout
                     android:id="@+id/layout_history_transaction"
-                    android:padding="5dp"
+                    android:paddingHorizontal="@dimen/dp_5"
+                    android:paddingVertical="@dimen/dp_10"
+                    android:background="@drawable/drawable_button_white_click"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -228,7 +231,9 @@
                 </RelativeLayout>
                 <RelativeLayout
                     android:id="@+id/layout_movie_saw"
-                    android:padding="5dp"
+                    android:paddingHorizontal="@dimen/dp_5"
+                    android:paddingVertical="@dimen/dp_10"
+                    android:background="@drawable/drawable_button_white_click"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
@@ -256,7 +261,9 @@
                 android:layout_height="wrap_content">
                 <RelativeLayout
                     android:id="@+id/layout_logout"
-                    android:padding="5dp"
+                    android:paddingHorizontal="@dimen/dp_5"
+                    android:paddingVertical="@dimen/dp_10"
+                    android:background="@drawable/drawable_button_white_click"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
