--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -48,12 +48,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:padding="@dimen/dp_5"
                 android:layout_marginTop="@dimen/dp_10"
                 android:text="@string/login"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/text_size_18sp"
                 android:textStyle="bold" />
             <LinearLayout
+                android:padding="@dimen/dp_5"
                 android:id="@+id/layout_name"
                 android:visibility="visible"
 
@@ -65,6 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:padding="@dimen/dp_5"
                     android:layout_marginTop="@dimen/dp_10"
                     android:textColor="@color/color_white"
                     android:textSize="@dimen/text_size_18sp"
