--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -48,7 +48,7 @@
             android:textColor="@color/color_red_main"
             android:textStyle="bold"
             android:layout_marginLeft="@dimen/dp_5"
-            android:text="CGV"/>
+            android:text="VENUS"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
